third_party/move/move-compiler-v2/tests/integers/signed/invalid_ops.exp

Diagnostics:
error: cannot use `&i64` with an operator which expects a value of type `integer`
  ┌─ tests/integers/signed/invalid_ops.move:3:9
  │
3 │         &x + &x
  │         ^^

error: cannot use `&i128` with an operator which expects a value of type `integer`
  ┌─ tests/integers/signed/invalid_ops.move:6:9
  │
6 │         &x + &x
  │         ^^

error: cannot use `i128` with an operator which expects a value of type `i64`
  ┌─ tests/integers/signed/invalid_ops.move:9:13
  │
9 │         x + y
  │             ^

error: cannot use `i128` with an operator which expects a value of type `i64`
   ┌─ tests/integers/signed/invalid_ops.move:12:13
   │
12 │         x + y
   │             ^

error: cannot use `i128` with an operator which expects a value of type `i64`
   ┌─ tests/integers/signed/invalid_ops.move:15:13
   │
15 │         x + y
   │             ^

error: cannot use `i128` with an operator which expects a value of type `i64`
   ┌─ tests/integers/signed/invalid_ops.move:18:13
   │
18 │         x + y
   │             ^

error: cannot use `i64` with an operator which expects a value of type `bool`
   ┌─ tests/integers/signed/invalid_ops.move:21:9
   │
21 │         x && y
   │         ^

error: cannot use `i128` with an operator which expects a value of type `bool`
   ┌─ tests/integers/signed/invalid_ops.move:24:9
   │
24 │         x && y
   │         ^

error: cannot use `i64` with an operator which expects a value of type `bool`
   ┌─ tests/integers/signed/invalid_ops.move:27:9
   │
27 │         x || y
   │         ^

error: cannot use `i128` with an operator which expects a value of type `bool`
   ┌─ tests/integers/signed/invalid_ops.move:30:9
   │
30 │         x || y
   │         ^

error: cannot use `i64` with an operator which expects a value of type `bool`
   ┌─ tests/integers/signed/invalid_ops.move:33:10
   │
33 │         !x
   │          ^

error: cannot use `i128` with an operator which expects a value of type `bool`
   ┌─ tests/integers/signed/invalid_ops.move:36:10
   │
36 │         !x
   │          ^
